--- a/style.css
+++ b/style.css
@@ -1,9 +1,51 @@
 @charset "UTF-8";
 
+* {
+    margin: 0;
+    padding: 0;
+}
 
+#fundo {
+    background-image: linear-gradient(45deg, black, crimson);
+    color: #ffffff;
+    height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
 
 #calculadora {
-    height: 300px;
-    width: 200px;
-    border: 2px solid black;
+    position: absolute;
+    background-color: black;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+    padding: 18px;
+}
+
+.bt {
+    color: #ffffff;
+    background-color: rgb(43, 42, 42);
+    height: 50px;
+    width: 50px;
+    border: none;
+    font-size: 25px;
+    margin: 4px;
+}
+
+.bt:hover {
+    background-color: #ffffffc0;
+    color: black;
+    cursor: pointer;
+}
+
+p {
+    background-color: #ffffff;
+    width: 225px;
+    height: 32px;
+    margin: 5px;
+    font-size: 25px;
+    color: black;
+    text-align: end;
+    padding: 3px;
 }
